# Demo

./: .~lock.results.csv#  CMakeLists.txt  GEMM.h  README.md  SPMM.h  build_practice.sh  main_GEMM.cpp  main_SPMM.cpp  results.csv  results_spmm.csv  run.sh  run_spmm.sh
plots/: plot.py
